LoggingSystemOpenApi, openapi merger - wip
